src/test/regression_testing/test_files/Go/NPD/good/test09.go
package main

import "fmt"

func test9_main() {
	arr := [5]int{1, 2}
	fmt.Println(arr[3])
}

func main() {
	test9_main()
}