src/test/regression_testing/test_files/Go/NPD/bad/test02.go
package main

import "fmt"

func test2_main() {
    var slice []int
    fmt.Println(slice[0]) 
}

func main() {
	test2_main()
}